# occlude

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
daemon/: dispatcher.cpp  dispatcher.hpp  main.cpp  parsing.hpp  scanner.cpp  scanner.hpp  utils.hpp
interface/: cli.hpp  main.cpp
lib/: common.hpp  config.hpp  engine.hpp  fs.cpp  fs.hpp  hash.cpp  hash.hpp  ipc.hpp  log.hpp  main.cpp  picosha2.h  setter.hpp  settings.hpp  state.cpp  state.hpp  store.cpp  store.hpp  wallpaperStore.hpp  wallpapers.hpp
